Apply fix to make edit and delete buttons visible

--- a/src/demo/demo-components/DemoSavedWordsList/DemoSavedWordsList.css
+++ b/src/demo/demo-components/DemoSavedWordsList/DemoSavedWordsList.css
@@ -30,6 +30,7 @@
     flex-direction: column;
     height: 80vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .saved-words-list-container::-webkit-scrollbar {
